examples/type_system/failing/110_call_arg_named_fn.flx
fn greet(name: String) -> String {
    name
}

fn main() -> Unit {
    let _x = greet(42)
}
